fixed mobile main menu broken in index page

--- a/style.css
+++ b/style.css
@@ -12052,8 +12052,7 @@
      color: #000;
      font-weight: bold;
      font-size: 15px;
-     letter-spacing: 2px;
-     margin-top: 5px;
+     letter-spacing: 1px;
    }
 
    .mobile-nassccom-container {
@@ -12073,6 +12072,7 @@
        position: static;
      }
    }
+
    @media (max-width: 767px) {
      .error-404 h2 {
        font-size: 150px;
@@ -12098,6 +12098,17 @@
      }
    }
    @media (max-width: 480px) {
+
+      /* Reducing mobile nasscom container size */
+      .mobile-nassccom-container {
+        box-sizing: border-box !important;
+        width: 80px;
+      }
+
+      .mobile-nassccom-container span {
+        font-size: 13.5px;
+      }
+
      .xs-hidden {
        display: none;
      }
